@@ -5,6 +5,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian, Japanese and Slovak
 .......PS. [ZBX-4054] added support for SNMP values of type OID (asaveljevs)
 
 Bug fixes:
+.......PS. [ZBX-9016] fixed items not being processed again in case these items or their hosts are disabled and then reenabled (asaveljevs, Sasha)
 A.F....... [ZBX-9065] fixed default value for screens_items.max_columns in PHP schema (Krists)
 ..F....... [ZBX-5077] fixed percentile calculation formula and corrected accessed index, by which value is selected (arvids)
 A......... [ZBX-8486] fixed re-linking templates with web scenarios (Krists)
@@ -499,6 +500,7 @@ New features:
 A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese, Polish and Russian translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+.......PS. [ZBX-9016] fixed items not being processed again in case these items or their hosts are disabled and then reenabled (asaveljevs, Sasha)
 ..F....... [ZBX-5077] fixed percentile calculation formula and corrected accessed index, by which value is selected (arvids)
 A......... [ZBX-8486] fixed re-linking templates with web scenarios (Krists)
 ..F....... [ZBX-8919] fixed range selection in graphs in IE10 and IE11 (arvids)
